==> samdbmg/sbc-wsn/node-software/src/radio_code/radio_spi_efm32.c <==
/**
 * SPI interface driver for RFM69W radio module
 * This code exposes functions for radio_control.c to use with the EFM32 MCU
 */

// Standard libraries
#include <stdint.h>
#include <stdbool.h>

/* Peripheral control includes */
#include "em_device.h"
#include "em_cmu.h"
#include "em_chip.h"
#include "em_usart.h"
#include "em_gpio.h"

/* Application-specific includes */
#include "radio_spi_efm32.h"
#include "misc.h"

/**
 * Configure the SPI peripheral and pins to talk to the radio
 */
void radio_spi_init(void)
{
    // Enable module clock and power up
    CMU_ClockEnable(cmuClock_USART1, true);

    // Base configuration of USART to SPI mode. Generated by EnergyAware
    // Designer tool
    USART_InitSync_TypeDef usart_init = USART_INITSYNC_DEFAULT;

    usart_init.baudrate     = 4000000;
    usart_init.databits     = usartDatabits8;
    usart_init.msbf         = 1;
    usart_init.master       = 1;
    usart_init.clockMode    = usartClockMode0;
    usart_init.prsRxEnable  = 0;
    usart_init.autoTx       = 1;

    USART_InitSync(USART1, &usart_init);

    // Configure the USART to use location 3, enable all the pins
    USART1->ROUTE = USART_ROUTE_TXPEN | USART_ROUTE_CLKPEN | USART_ROUTE_RXPEN |
            USART_ROUTE_LOCATION_LOC3;

    // Disable automatic control of the CS line
    USART1->CTRL &= ~USART_CTRL_AUTOCS;

    // Enable transmit and receive
    USART1->CMD |= USART_CMD_TXEN | USART_CMD_RXEN;

    // Pin setup
    GPIO_PinModeSet(gpioPortD, 6, gpioModeInput, 0);     // MISO
    GPIO_PinModeSet(gpioPortD, 7, gpioModePushPull, 0);  // MOSI
    GPIO_PinModeSet(gpioPortC, 14, gpioModePushPull, 0); // CS
    GPIO_PinModeSet(gpioPortC, 15, gpioModePushPull, 0); // CLK

    // Set NSS high
    radio_spi_select(false);

}

/**
 * Enable or disable clock to the SPI module
 * @param state True to power up, false to power down
 */
void radio_spi_powerstate(bool state)
{
    CMU_ClockEnable(cmuClock_USART1, state);
}

/**
 * Send and receive single bytes of data
 *
 * @param send_data A byte of data to send, set to zero for a read
 * @return          Received byte
 */
uint8_t radio_spi_transfer(uint8_t send_data)
{
    return USART_SpiTransfer(USART1, send_data);
}

/**
 * Assert or release the NSS line
 *
 * @param select Set to true to assert NSS low, false to release
 */
void radio_spi_select(bool select)
{
    if (select)
    {
        GPIO_PinOutClear(gpioPortC, 14);
    }
    else
    {
        GPIO_PinOutSet(gpioPortC, 14);
    }
}
